barra de progresso
adicionando uma barra de progresso

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             </button>
             </div>
         </section>
+        <div class="progress-container">
+             <div id="progress-bar"></div>
+        </div>
 
     </main>
 
